--- a/frontend/index.html
+++ b/frontend/index.html
@@ -10,7 +10,7 @@
       rel="stylesheet"
       href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500;700&display=swap" />
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700&display=swap" rel="stylesheet">
-    <title>React Final Project</title>
+    <title>React Project Facebook</title>
   </head>
   <body>
     <div id="root"></div>
